
- pip or pip3 install dearpygui --upgrade
- Read the `Breaking Changes` section (here in the changelog).
- Please report any issue!

-----------------------------------------------------------------------
 VERSION 0.4.3 WIP
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.3

New Keywords:
- Text:           Added "source"
- Text:           Added "default_value"

-----------------------------------------------------------------------
 VERSION 0.4.2 (9/30/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.2

Fixes:
- Standard Windows: fixed show/hide of standard windows
- Windows:          fixed run time adding crashes when collapsing

-----------------------------------------------------------------------
 VERSION 0.4.1 (9/30/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.1

Fixes:
- Logger:       show_item/hide_item now working
- ID Stack:     unique labels withing a widget "path" not required anymore
- Demo:         updates for colors

-----------------------------------------------------------------------
 VERSION 0.4.0 (9/28/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.0

Updates:
- ImPlot: upgraded to commit 90cbb56

Fixes:
- Other:      Too many fixes to count.
- Threadpool: Fixed issue with some tasks going uncompleted
- Popups:     Can now be added anywhere (don't have to be right after their parent)
- Tooltips:   Can now be added anywhere (don't have to be right after their parent)
- Widgets:    Can widths can now be negative (size from the right side of screen)

Breaking Changes:
- Handlers:       removed "handler" from all callbacks except resize